examples/test/testpolicy9634.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9634
  namespace: namespace417
spec:
  podSelector:
    matchLabels:
      key46: value36
      key21: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value5
      podSelector:
        matchLabels:
          key44: value23
          key48: value19
